--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -8,7 +8,7 @@
 <style>
 :root {
     /* === Cover / Landing area === */
-    --cover-text-color: #7c0000;
+    --cover-text-color: #000000;
     /* Used for Landing screen menu buttons, but potentially usable for highlighting other things */
     --highlight: #e0e0e0;
     --highlight-contrast: var(--cover-text-color);
@@ -22,7 +22,7 @@
 
 
     /* === sticky top/left navigation menus === */
-    --sticky-menu-text-color: #af2020;
+    --sticky-menu-text-color: #000000;
 
 
     /* === Alternating content (post) sections  === */
@@ -34,7 +34,7 @@
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
     /* Dark section - background color */
-    --section-dark-bg-color: #7C0000;
+    --section-dark-bg-color: #000000;
 
     /* Light&Dark section >quote. Supressive color, compared to 'Light section - text color'*/
     --section-uni-quote: rgb(133, 132, 132);
@@ -85,7 +85,7 @@ label {
 }
 
 input[type=submit] {
-  background-color: #7c0000;
+  background-color: #7a7a7a;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -95,7 +95,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #5c0101;
+  background-color: #383838;
 }
 
 .container {
