--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -27,14 +27,14 @@
 
     /* === Alternating content (post) sections  === */
     /* Light section - text color */
-    --section-light-text-color: #000000;
+    --section-light-text-color: #c7c7c7;
     /* Light section - background color */
     --section-light-bg-color: rgb(233, 233, 233);
 
     /* Dark section - text color */
     --section-dark-text-color: var(--section-light-bg-color);
     /* Dark section - background color */
-    --section-dark-bg-color: #000000;
+    --section-dark-bg-color: #252525;
 
     /* Light&Dark section >quote. Supressive color, compared to 'Light section - text color'*/
     --section-uni-quote: rgb(133, 132, 132);
