fixed button color

--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -14,7 +14,7 @@
     --highlight-contrast: var(--cover-text-color);
     /*iverse colors used for :hover */
     --highlight-inverse: var(--cover-text-color);
-    --highlight-inverse-contrast: #000000;
+    --highlight-inverse-contrast: #FFFFFF;
 
     /* visual guard around title and description, when the feature is enabled */
     --cover-title-and-description-guard-bg-color: rgba(223, 223, 223, 0.6);
